<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.acronix.danachos.mcm.fragments.UserSettingFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_gravity="center|top"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="25dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="15dp"
                android:layout_weight="0.3"
                android:gravity="right"
                android:text="@string/userarea_username"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvUsernameSetting"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:text="@string/userarea_username" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="15dp"
                android:layout_weight="0.3"
                android:gravity="right"
                android:text="@string/userarea_email"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvEmaiSetting"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:text="@string/userarea_email" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="15dp"
                android:layout_weight="0.3"
                android:gravity="right"
                android:text="@string/userarea_shared"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvTokenSharedSetting"
                android:textIsSelectable="true"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:text="@string/userarea_shared" />


        </LinearLayout>

        <Button
            android:layout_marginTop="25dp"
            android:id="@+id/btnChangePassSetting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/userarea_btn_changepass" />

    </LinearLayout>



</FrameLayout>
