<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.acronix.danachos.mcm.fragments.AddExpenseFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_gravity="center|top"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="25dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:gravity="left|center_vertical"

                android:text="@string/exparea_date"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/etDateExpense"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:inputType="date"
                android:layout_weight="0.3"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:hint="Date"/>




        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:gravity="left|center_vertical"

                android:text="@string/exparea_name"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/etNameExpense"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:hint="Name"/>




        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:gravity="left|center_vertical"

                android:text="@string/exparea_amount"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/etAmountExpense"
                android:inputType="number"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:hint="Amount"/>




        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">


            <Button
                android:background="@drawable/rounded_shape2"
                android:id="@+id/btnCancelExpense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cancel" />

            <LinearLayout
                android:layout_width="20dp"
                android:layout_height="match_parent"></LinearLayout>


            <Button

                android:background="@drawable/rounded_shape"
                android:textColor="#1e1e1e"
                android:id="@+id/btnSaveExpense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Save" />







        </LinearLayout>



    </LinearLayout>

</FrameLayout>
